--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,10 @@ name: CI
   push:
     branches:
       - master
-  schedule:
-    - cron: "30 5 * * 0"
 
 defaults:
   run:
-    working-directory: 'dhoeric.aws-ssm'
+    working-directory: 'deekayen.aws-ssm'
 
 jobs:
 
@@ -21,7 +19,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'dhoeric.aws-ssm'
+          path: 'deekayen.aws-ssm'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
@@ -43,20 +41,16 @@ jobs:
         include:
           - distro: centos8
             playbook: converge.yml
-          - distro: fedora32
+          - distro: ubuntu2204
             playbook: converge.yml
-          - distro: ubuntu2004
-            playbook: converge.yml
-          - distro: ubuntu1804
-            playbook: converge.yml
-          - distro: debian10
+          - distro: debian11
             playbook: converge.yml
 
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'dhoeric.aws-ssm'
+          path: 'deekayen.aws-ssm'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
