--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
-# defaults file for aws-ssm
-url: 'amd64'
+
+url: amd64
+disable_gpg_check: false
+gpg_key_url: https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2bc7c7c267bbd505eaa491e6dd81a61756baa549
+gpg_key_fingerprint: 2bc7 c7c2 67bb d505 eaa4  91e6 dd81 a617 56ba a549
 # aws_ssm_activation_code:
 # aws_ssm_activation_id:
-# aws_ssm_ec2_region: "{{ec2_region}}"
+# aws_ssm_ec2_region: "{{ ec2_region }}"
