--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,12 +1,15 @@
 ---
+
 - name: Converge
   hosts: all
   become: true
 
   pre_tasks:
     - name: Update apt cache.
-      apt: update_cache=true cache_valid_time=300
+      apt:
+        update_cache: true
+        cache_valid_time: 300
       when: ansible_os_family == 'Debian'
 
   roles:
-    - role: dhoeric.aws-ssm
+    - role: deekayen.aws-ssm
