--- a/tasks/register.yml
+++ b/tasks/register.yml
@@ -1,11 +1,16 @@
 ---
 
-- name: Check if node is registered
-  stat:
+- name: Check if node is registered.
+  ansible.builtin.stat:
     path: /var/lib/amazon/ssm/registration
+  tags:
+    - register_ssm_agent
   register: stat_result
 
-- name: Register managed instance
-  command: amazon-ssm-agent -register -clear -code '{{aws_ssm_activation_code}}' -id '{{aws_ssm_activation_id}}' -region '{{aws_ssm_ec2_region}}' -y
+- name: Register managed instance.
+  ansible.builtin.command: "amazon-ssm-agent -register -clear -code '{{ aws_ssm_activation_code }}' -id '{{ aws_ssm_activation_id }}' -region '{{ aws_ssm_ec2_region }}' -y"
+  tags:
+    - skip_ansible_lint
+    - register_ssm_agent
   notify: restart amazon-ssm-agent
   when: not stat_result.stat.exists
