Downgrade Ubuntu support until apt-key module catches up.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -24,7 +24,7 @@ galaxy_info:
         - bullseye
     - name: Ubuntu
       versions:
-        - jammy
+        - focal
 
   galaxy_tags:
     - cloud
