Change apt-key to use URL.
Test on the listed platforms in meta config.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,10 +21,12 @@ galaxy_info:
         - 8
     - name: Debian
       versions:
+        - buster
         - bullseye
     - name: Ubuntu
       versions:
         - focal
+        - jammy
 
   galaxy_tags:
     - cloud
