--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,40 +8,24 @@ name: CI
 
 defaults:
   run:
-    working-directory: 'deekayen.aws-ssm'
+    working-directory: 'deekayen.aws_ssm'
 
 jobs:
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the codebase.
-        uses: actions/checkout@v2
-        with:
-          path: 'deekayen.aws-ssm'
-
-      - name: Set up Python 3.
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: Install test dependencies.
-        run: pip3 install yamllint ansible
-
-      - name: Lint code.
-        run: |
-          yamllint .
-
   molecule:
     name: Molecule
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
+          - distro: centos7
+            playbook: converge.yml
           - distro: centos8
             playbook: converge.yml
           - distro: ubuntu2004
+            playbook: converge.yml
+          - distro: ubuntu2204
+            playbook: converge.yml
+          - distro: debian10
             playbook: converge.yml
           - distro: debian11
             playbook: converge.yml
@@ -50,7 +34,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'deekayen.aws-ssm'
+          path: 'deekayen.aws_ssm'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
