--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ name: Release
 
 defaults:
   run:
-    working-directory: 'dhoeric.aws-ssm'
+    working-directory: 'deekayen.aws_ssm'
 
 jobs:
 
@@ -24,7 +24,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'dhoeric.aws-ssm'
+          path: 'deekayen.aws_ssm'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
