--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,6 +3,9 @@ dependency:
   name: galaxy
 driver:
   name: docker
+lint: |
+  ansible-lint .
+  flake8
 platforms:
   - name: instance
     image: "geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest"
